--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <a href="#" class="header__logo logo">
           <img src="./pictures/header/logo.png">
         </a>
-        <div class="header__burger">
+        <button class="header__burger">
           <span></span>
-        </div>
+        </button>
         <nav class="header__menu menu">
           <ul class="menu__list">
             <li class="menu__item">
@@ -36,10 +36,10 @@
                   </svg>
                 </span>
               </a>
-              <ul class="sub-menu__item">
-                <li><a class="sub-menu__link" href="#">Home V1</a> </li>
-                <li><a class="sub-menu__link" href="#">Home V2</a></li>
-                <li><a class="sub-menu__link" href="#">Home V3</a></li>
+              <ul class="sub-menu__list">
+                <li class="sub-menu__item"><a class="sub-menu__link" href="#">Home V1</a> </li>
+                <li class="sub-menu__item"><a class="sub-menu__link" href="#">Home V2</a></li>
+                <li class="sub-menu__item"><a class="sub-menu__link" href="#">Home V3</a></li>
               </ul>
             </li>
             <li class="menu__item">
@@ -320,7 +320,7 @@
     </main>
     <footer class="footer">
       <div class="footer__container">
-        <div class="footer__row_top">
+        <div class="footer__row footer__row_top">
           <div class="footer__logo">
             <a href="#" class="logo">
               <img src="./pictures/header/logo.png">
@@ -421,44 +421,44 @@
             </ul>
           </div>
           <nav class="footer__mobile mobile">
-            <ul class="mobile__menu">
-              <li><a class="mobile__link" href="#">Homepages</a>
+            <ul class="mobile__list">
+              <li class="mobile__item"><a class="mobile__link" href="#">Homepages</a>
                 <span class="mobile__arrow arrow"></span>
-                <ul class="mobile__menu-sub">
-                  <li><a class="mobile__link-sub" href="#">Home V1</a> </li>
-                  <li><a class="mobile__link-sub" href="#">Home V2</a></li>
-                  <li><a class="mobile__link-sub" href="#">Home V3</a></li>
+                <ul class="sub-mobile__list">
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Home V1</a> </li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Home V2</a></li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Home V3</a></li>
                 </ul>
               </li>
-              <li><a class="mobile__link" href="#">About</a>
+              <li class="mobile__item"><a class="mobile__link" href="#">About</a>
                 <span class="mobile__arrow arrow"></span>
-                <ul class="mobile__menu-sub">
-                  <li><a class="mobile__link-sub" href="#">About V1</a> </li>
-                  <li><a class="mobile__link-sub" href="#">About V2</a></li>
-                  <li><a class="mobile__link-sub" href="#">About V3</a></li>
+                <ul class="sub-mobile__list">
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">About V1</a> </li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">About V2</a></li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">About V3</a></li>
                 </ul>
               </li>
-              <li><a class="mobile__link" href="#">Blog</a>
+              <li class="mobile__item"><a class="mobile__link" href="#">Blog</a>
                 <span class="mobile__arrow arrow"></span>
-                <ul class="mobile__menu-sub">
-                  <li><a class="mobile__link-sub" href="#">Overview</a></li>
-                  <li><a class="mobile__link-sub" href="#">Category</a></li>
-                  <li><a class="mobile__link-sub" href="#">Detailed</a></li>
+                <ul class="sub-mobile__list">
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Overview</a></li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Category</a></li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Detailed</a></li>
                 </ul>
               </li>
-              <li><a class="mobile__link" href="#">Others</a>
+              <li class="mobile__item"><a class="mobile__link" href="#">Others</a>
 
                 <span class="mobile__arrow arrow"></span>
-                <ul class="mobile__menu-sub">
-                  <li><a class="mobile__link-sub" href="#">Contact V1</a> </li>
-                  <li><a class="mobile__link-sub" href="#">Contact V2</a></li>
-                  <li><a class="mobile__link-sub" href="#">Contact V3</a></li>
-                  <li><a class="mobile__link-sub" href="#">Pricing</a> </li>
-                  <li><a class="mobile__link-sub" href="#">Style Guide</a></li>
-                  <li><a class="mobile__link-sub" href="#">Licensing</a></li>
-                  <li><a class="mobile__link-sub" href="#">Changelog</a> </li>
-                  <li><a class="mobile__link-sub" href="#">Legal</a></li>
-                  <li><a class="mobile__link-sub" href="#">404</a></li>
+                <ul class="sub-mobile__list">
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Contact V1</a> </li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Contact V2</a></li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Contact V3</a></li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Pricing</a> </li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Style Guide</a></li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Licensing</a></li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Changelog</a> </li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">Legal</a></li>
+                  <li class="sub-mobile__item"><a class="sub-mobile__link" href="#">404</a></li>
                 </ul>
               </li>
             </ul>
